# dmine-pro

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindYaml.cmake
cmake/modules/: FindGflags.cmake  FindGlog.cmake  FindYaml-cpp.cmake
config/: dmine_config.txt  dmine_config.yaml  dmine_pro.yaml  dmine_pro_biokg.yaml  gar_chase.yaml  gar_chase_config.txt  gar_match.yaml  gar_match_config.txt  gar_match_with_pivot_config.txt  gen_labels.yaml  gptools_config.yaml  mgm.yaml  model.pt
doc/: 05e9a91947860756.xlsx  Attribute Expand.xlsx  Attribute Expansion Graph.md  DMine-Pro总结.docx  DP-ISO说明文档.md  GPAR挖掘拓展相关理论.docx  details.md  done.md  experiment.md  match.md  need.md  supp_expriment.xlsx  supp_interaction_experiment.xlsx  todo.md
doc/SPARQL/: SPARQL.md  query.md
include/GUNDAM/: CMakeLists.txt  README.md
include/GUNDAM/benchmark/: benchmark_match.cc
include/GUNDAM/doc/: dp_iso_todo.md  edge.md  graph.md  index.md  todo.md  vertex.md
include/GUNDAM/include/gundam/algorithm/: bfs.h  bfs_limit_width.h  boost_iso.h  dfs.h  dp_iso.h  dp_iso_using_match.h  match_helper.h  vf2.h  vf2_boost.h
include/GUNDAM/include/gundam/component/: attribute.h  container.h  container2.h  generator.h  iterator.h  iterator2.h  pointer.h  timer.h  util.h  vertex_set.h
include/GUNDAM/include/gundam/data_type/: datatype.h  datetime.h  label.h
include/GUNDAM/include/gundam/graph_type/: graph.h  graph_configure.h  large_graph.h  large_graph2.h  large_graph3.h  simple_small_graph.h  small_graph.h
include/GUNDAM/include/gundam/io/: csvgraph.h  rapidcsv.h
include/GUNDAM/include/gundam/match/: match.h  matchcontainer.h  matchresult.h
include/GUNDAM/include/gundam/tool/: connected.h  edge_id_continued.h  has_isolate_vertex.h  merge_by_id.h  remove_isolate_vertex.h  same_pattern.h  sub_graph_of.h  unique_patterns.h
include/GUNDAM/include/gundam/type_getter/: edge_attribute_handle.h  edge_handle.h  edge_id.h  edge_label.h  vertex_attribute_handle.h  vertex_handle.h
include/GUNDAM/test/: CMakeLists.txt  test1.cc  test2.cc  test_attribute.cc  test_bfs.cc  test_bfs_limit_width.cc  test_connected.cc  test_container.cc  test_csvgraph.cc  test_dfs.cc  test_dp_iso.cc  test_dp_iso_using_match.cc  test_graph.cc  test_idgen.cc  test_iterator2.cc  test_multi_vf2.cc  test_pointer.cc  test_random_walk.cc  test_same_pattern.cc  test_simple_graph.cc  test_vf2.cc  test_writematchresult.cc
include/gundam/: .gitignore  CMakeLists.txt
include/gundam/benchmark/: CMakeLists.txt  benchmark_match.cc
include/gundam/doc/: edge.md  vertex.md
include/gundam/include/gundam/algorithm/: dfs.h  dp_iso.h  match_semantics.h  multi_query_dp_iso.h  vf2.h
include/gundam/test/: test2.cc  test_attribute.cc  test_connected.cc  test_container2.cc  test_datatype.cc  test_dfs.cc  test_has_isolate_vertex.cc  test_iterator.cc  test_multi_query_dp_iso_using_match.cc  test_same_pattern.cc  test_simple_graph.cc  test_vf2.cc
include/stardand/: errcode.h  paratype.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  datagraph_information.cpp  dmine.cpp  dmine_algo.cc  dmine_origin.cc  dmine_pro.cc  gar_chase.cc  gar_config.cc  gar_config.h  gar_match.cc  gar_match_mpi.cc  gmar_discover.cpp  mgm.cc  multi_gar_match.cc  multimgm.cc  pattern_gen.cpp  test_dmine_new.cpp  tgraph_apply.cc  tgraph_discover.cc
src/ecs_by_gundam/: CMakeLists.txt  ecs_api.h  ecs_by_gundam.cpp
src/gar/: csv_gar.h  gar.h  gar_chase.h  gar_match.h  literal.h  literalset.h  ml_literal.h
src/gmar/: gmar_discover.h  gmar_discover_info.h  message_frquent_model.h  ml_model.h  user_phone_frquent_model.h
src/gpar/: CMakeLists.txt  datagraph_information.cpp  discover_gpar.cpp  gpar.h  graph_pattern_association_rules.cpp  read_graph.cpp  test.cpp
src/gpar_template/: filter_gpar_by_eval_func.h  get_datagraph_information.h  gpar_config.h  gpar_dfs_code.h  gpar_discover.h  gpar_diversification.h  gpar_expand.h  gpar_match.h  gpar_new.h  gpar_origin.h  gpar_unique.h  readme.md  round_log.h  top_k_container.h
src/gptools/: CMakeLists.txt  action.h  fold_unfold.cc  fold_unfold.h  gptdef.h  gptools.cc  gptools.h  select.cc  select.h  yaml_config.cc  yaml_config.h
src/graph_convert/: CMakeLists.txt  csv_to_gsi_graph.cpp  csv_to_rdf.cpp  readme.md
src/graph_package/: CMakeLists.txt  attribute_dict.h  csvgp.cc  csvgp.h  gpdef.h  graph_package.h  label_dict.h  test_graph_package.cc  type_dict.h
src/mcts/: dmine_algo.h  get_datagraph_information.h  gpar.h  mgm.h  multimgm.h  search_tree_node.h
src/pattern_gen/: patterngen.h
src/test/: CMakeLists.txt  OutputGraph.h  test_boost_iso.cpp  test_count.cpp  test_csvgar.cpp  test_csvgraph.cpp  test_garchase.cpp  test_garcopy.cpp  test_garmatch.cpp  test_large_graph_remove.cpp  test_match.cpp  test_openmp.cpp  test_small_graph.cpp  test_vf2.cpp  test_yamlcpp.cpp
src/tgraph_rule/: apply.yaml  comm.h  config.h  discover.h  discover.yaml  global.h  k_queue.h  match.h  partition.h  tgraph.h  tgraph_rule.h  time_window.yaml
src/tgraph_rule/tgr-test/: liantong_100_d3_e.csv  liantong_100_d3_v.csv  liantong_d3_e.csv  liantong_d3_v.csv
testdata/: fold_test.yaml  g10_e.csv  g10_v.csv  g1_e.csv  g1_v.csv  graph-0.e  graph-0.v  graph.e  liantong_e.csv  liantong_e1.csv  liantong_e10.csv  liantong_e_attr_call.csv  liantong_e_attr_send message.csv  liantong_e_attr_visit.csv  liantong_n.csv  liantong_n1.csv  liantong_n10.csv  liantong_n_attr_phone.csv  liantong_n_attr_user.csv  liantong_n_attr_web.csv  match_result.txt  root_e.csv  root_e1.csv  root_v.csv  root_v1.csv  test.e  test.v  test_fold_graph.afile  test_fold_graph.e  test_fold_graph.lfile  test_fold_graph.tfile  test_fold_graph.v  teste.csv  teste1.csv  teste11.csv  testn1.csv  testn11.csv  testpattern.e  testpattern.v
testdata/GAR/: X.csv  X1.csv  Y.csv  Y1.csv  diff_edge.csv  diff_vertex.csv  edge.csv  edge1.csv  edge100.csv  edge101.csv  literal文件规范.csv  node.csv  node1.csv  node100.csv  node101.csv
testdata/GAR/test/: default_y.csv  pattern_1_e.csv  pattern_1_v.csv
testdata/gar_liantong/: edge.csv  node.csv  y.csv
(+23 files in other folders)
